# smart_mining

./: .gitignore  CLAUDE.md  LICENSE  README.md
.github/workflows/: aggreagator-install-dependencies.yml  api-install-dependencies.yml  deploy-aggregator.yml  deploy-dashboard.yml  proxy-install-dependencies.yml  scrapper-install-dependencies.yml
aggregator/: API_MISSING.md  CLAUDE.md  Dockerfile  QUALIFICATION.md  README.md  aggregator.py  arbiter.py  benchmark.py  config.json.example  config.py  gpus.json  hardware.py  requirements.txt  test.py
aggregator/api/: __init__.py  api_http.py  api_jsonrpc.py  binance.py  coingecko.py  hashrate_no.py  two_miners.py  what_to_mine.py
aggregator/api/explorer/: __init__.py  alephium.py  base.py  blockchair.py  cfx.py  eiquidus.py  ergo.py  etc.py  kaspa.py  mempool.py  nervos.py  pirate.py  qrl.py  rvn.py  salvium.py  whatsonchain.py  xmr.py
aggregator/api/market/: __init__.py  binance.py  coincap.py  coingecko.py  coinmarketcap.py  coinpaprika.py  cryptocompare.py  messari.py
aggregator/api/mining/: __init__.py  minerstat.py
aggregator/api/pool/: __init__.py  nanopool.py  two_miners.py
aggregator/apps/: __init__.py  application.py  standalone.py
aggregator/common/: __init__.py  aggregator_mode.py  api_history_manager.py  block.py  coin.py  coin_manager.py  hardware_manager.py  numeric.py  pg.py  pool.py  pool_manager.py  reward.py
aggregator/tests/: test_coin_create_or_update.py  test_coin_manager.py  test_coin_minerstat.py  test_coin_setters.py  test_coingecko_price_fallback.py  test_kaspa_hashrate_normalization.py  test_reward_emission_usd.py  test_reward_setters.py
aggregator/workflow/: __init__.py  coin.py  explorer.py  managers.py  pool.py
api/: Dockerfile  config.json.example  index.js  package-lock.json  package.json  postman.json
api/common/: config.js  database.js
api/info/: coin.js  coins.js
api/profile/: emission.js  hash_usd.js  market_cap.js  network_hashrate.js  usd_sec.js
dashboard/: INSTALL.md  README.md
dashboard/backend/: .env.example  package-lock.json  package.json  server.js
dashboard/frontend/: index.html  package-lock.json  package.json
dashboard/frontend/src/: App.jsx  api.js  index.css
dashboard/frontend/src/components/: Card.jsx  DataTable.jsx  PageHeader.jsx  Sidebar.jsx  Spinner.jsx  Tooltip.jsx
dashboard/frontend/src/pages/: ApiHistoryPage.jsx  CoinHistoryPage.jsx  CoinsPage.jsx  GlobalApiPage.jsx  GlobalPoolsPage.jsx  HardwarePage.jsx  MixedHistoryPage.jsx  PoolComparePage.jsx  PoolHistoryPage.jsx  PoolsPage.jsx  ProfileInternalPage.jsx
database/: Dockerfile  api_history.sql  coins.sql  db.sql  hardware.sql  install_db.sh  pool.sql  profile.sql
proxy/: BUILD.md  CLAUDE.md  CMakeLists.txt  proxy.cpp
proxy/algo/: CMakeLists.txt  hash_utils.hpp
proxy/algo/tests/: CMakeLists.txt
proxy/common/: CMakeCache.txt  CMakeLists.txt  boost_utils.cpp  boost_utils.hpp  cast.hpp  custom.hpp
proxy/common/log/: CMakeLists.txt  log.cpp  log.hpp
proxy/mining/: CMakeLists.txt  api.cpp  api.hpp  brain.cpp  brain.hpp  coin_miner.hpp  coin_table.hpp  database.cpp  database.hpp  miner_table.cpp  miner_table.hpp
proxy/network/: CMakeLists.txt  client_tcp.cpp  client_tcp.hpp  server.cpp  server.hpp  stream.cpp  stream.hpp
proxy/network/session/: CMakeLists.txt  miner.cpp  miner_data.hpp  miner_on_message.cpp  miner_send_message.cpp  pool.cpp  pool_data.cpp  pool_data.hpp  pool_on_message.cpp  pool_send_message.cpp  session.cpp  session.hpp  session_manager.cpp  session_manager.hpp
proxy/profile/: CMakeLists.txt  data_base.hpp  data_emission.hpp  data_hash_usd.hpp  data_market_cap.hpp  data_network_hashrate.hpp  data_usd_sec.hpp  profile_manager.cpp  profile_manager.hpp
proxy/stratum/: CMakeLists.txt  miner.hpp  pool.hpp  proxy.hpp  stratum.hpp
scrapper/: Dockerfile  benchmark.py  config.json.example  config.py  requirements.txt  scrapper.py
scrapper/api/: __init__.py  api_http.py  binance.py  hashrate_no.py  minerstat.py  what_to_mine.py
scrapper/common/: __init__.py  coin.py  coin_manager.py  hardware_manager.py  pg.py  reward.py
script/: db.sql  install_db.sh
