file(GLOB HEADERS "*.hpp")
file(GLOB SOURCES "*.cpp")

target_sources(${PROXY_EXE} PUBLIC
${HEADERS}
${SOURCES}
)

target_sources(${PROXY_UNIT_TEST_EXE} PUBLIC
${HEADERS}
${SOURCES}
)

add_subdirectory(log)


set(SOURCES_COMMON ${HEADERS} ${SOURCES} PARENT_SCOPE)
set(SOURCES_COMMON_LOG ${SOURCES_COMMON_LOG} PARENT_SCOPE)
